--- a/styles/pdf-viewer.css
+++ b/styles/pdf-viewer.css
@@ -391,6 +391,7 @@
     }
     
     .pdf-toolbar-right {
+        justify-self: end;
     }
 }
 
